Fixed navbar spacing

--- a/estore-ui/src/app/components/base-template/base-template.component.css
+++ b/estore-ui/src/app/components/base-template/base-template.component.css
@@ -1,6 +1,6 @@
 .background {
     position: absolute;
-    top: 0;
+    top: 5%;
     bottom: 0;
     z-index: 1;
     width: 100%;
