--- a/estore-ui/src/app/components/nav-bar/nav-bar.component.css
+++ b/estore-ui/src/app/components/nav-bar/nav-bar.component.css
@@ -17,6 +17,7 @@
   padding: 1%;
   color: #FFFEFE;
   caret-color: transparent;
+  cursor: pointer;
 }
 
 a {
